# redstone

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  bench1.toml  bench2.toml  bench3.toml  demo_basic.toml  demo_fault.toml  demo_ff.toml  demo_repro2.toml  demo_repro3.toml  determinism.py  sim.toml  vcpkg.json
benches/: dgram.cpp  fib.cpp  socket.cpp
demo/: demo.h  echo.cpp  squawk.cpp
include/redstone/: redstone.hpp  replica.hpp
include/redstone/disk/: disk.hpp
include/redstone/hook/: hook.hpp  syscalls.hpp
include/redstone/net/: fault.hpp  network.hpp  socket.hpp  udp.hpp
include/redstone/random/: aes-ctr.hpp  rng.hpp
include/redstone/replica/: machine.hpp
include/redstone/sim/: runner.hpp
include/redstone/sys/: child.hpp  command.hpp
include/redstone/time/: time.hpp
paper/: .gitignore  Makefile  paper.tex  style.sty
src/: hook_impls.cpp  hook_impls.hpp  main.cpp  metrics.cpp  metrics.hpp  redstone.cpp  redstone.hpp  replica.cpp  replica.hpp  simple.cpp
src/disk/: disk.cpp
src/hook/: hook.cpp  hook.hpp  impls.cpp  impls.hpp  syscalls.cpp
src/hooks/: .gitignore  CMakeLists.txt  altprintf.cpp  test.cpp
src/net/: datagram_socket.cpp  datagram_socket.hpp  fault.hpp  network.cpp  network.hpp  socket.cpp  socket.hpp  stream_socket.cpp  stream_socket.hpp  udp.cpp  udp.hpp
src/random/: getrandom.hpp  rng.hpp  splitmix.hpp  xoshiro.hpp
src/sim/: file_descriptor.cpp  file_descriptor.hpp  machine.cpp  machine.hpp  replica.cpp  replica.hpp  runner.hpp  simulator.hpp
src/sim/runner/: ptrace.cpp
src/sys/: child.cpp  command.cpp  command.hpp  file.cpp  file.hpp  ptrace.cpp  ptrace.hpp
src/time/: time.cpp  time_tests.cpp
